improve legacy4j ui